--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,13 +4,13 @@
 
     <application
         android:allowBackup="true"
-        android:name=".MainApplication"
+        android:name="com.mond.babytory.MainApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MealDiaperSleep">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.mond.babytory.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
